# BinaryTraderWithMT

./: .env.example  .gitignore  Dockerfile  README.md  aerich.ini  docker-compose.yml  pyproject.toml  requirements.txt  sample_mt4_payload.json
app/: __init__.py  config.py  main.py  memory.py  models.py
app/agent/: graph.py  nodes.py  state.py
mt4/: ZeroMQ.mqh  mt4_bridge.mq4
scripts/: test_setup.py  zmq_router.py
